# SaturnZap

./: .env.example  .gitignore  .secrets.baseline  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: lightning-dev.agent.md
.github/hooks/: post-edit-sync.json  post-edit-sync.sh
.github/instructions/: tests.instructions.md
.github/prompts/: add-command.prompt.md
.github/workflows/: build-ldk-wheels.yml  ci.yml  codeql.yml  publish.yml
docs/: agent-guide.md  architecture.md  configuration.md  getting-started.md  json-api-reference.md  mcp-server.md  security-scenarios.md
hooks/: pre-commit  pre-push
security/: security_scan.py
security/profiles/: saturnzap.yaml
skills/saturnzap/: SKILL.md
skills/saturnzap/references/: json-contracts.md
src/saturnzap/: __init__.py  backup.py  cli.py  config.py  ipc.py  keystore.py  l402.py  liquidity.py  lqwd.py  mcp_server.py  node.py  output.py  payments.py  service.py
tests/: conftest.py  test_backup.py  test_cli.py  test_config.py  test_ipc.py  test_keystore.py  test_l402.py  test_liquidity.py  test_lqwd.py  test_mcp_server.py  test_node.py  test_output.py  test_payments.py  test_service.py
tests/integration/: conftest.py  test_channel_lifecycle.py  test_error_cascades.py  test_full_lifecycle.py  test_payment_flow.py
tests/live/: conftest.py  test_live_connectivity.py  test_live_mainnet.py
tests/reliability/: test_reliability.py
tests/security/: test_input_validation.py  test_seed_security.py  test_spending_guards.py
tests/ux/: test_agent_scenarios.py
