[project]
name = "saturnzap"
version = "0.1.0"
description = "CLI-first, non-custodial Lightning Network wallet for autonomous AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Shone Anstey" }]
keywords = ["lightning", "bitcoin", "wallet", "cli", "ldk", "l402", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "typer>=0.15",
    "cryptography>=44.0",
    "platformdirs>=4.3",
    "mnemonic>=0.21",
    "ldk-node",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "mcp>=1.26",
]

[project.urls]
Homepage = "https://github.com/ShoneAnstey/SaturnZap"
Repository = "https://github.com/ShoneAnstey/SaturnZap"
Issues = "https://github.com/ShoneAnstey/SaturnZap/issues"

[tool.uv.sources]
ldk-node = { path = "vendor/ldk_node-0.7.0-py3-none-any.whl" }

[project.scripts]
sz = "saturnzap.cli:main_cli"
sz-mcp = "saturnzap.mcp_server:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saturnzap"]

[tool.hatch.build.targets.sdist]
exclude = [
    "vendor/",
    ".ruff_cache/",
    ".pytest_cache/",
    "logos/",
    "security/",
    "skills/",
    "hooks/",
    "plans/",
    "memory/",
    ".env.example",
    ".secrets.baseline",
    ".github/",
]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires running SaturnZap nodes on droplets (deselect with '-m not live')",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "pyyaml>=6.0",
]
